--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,20 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+target
+.classpath
+.project
+.settings
+.idea
+.testenv
+*.iml
+release-repo
+.class
+.png
+test-output/
+.DS_Store
+bin/
+
 # Package Files #
 *.jar
 *.war
@@ -21,3 +35,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
